--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Meme Generator</title>
   </head>
   <body>
